k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plataforma-ingress
  namespace: plataforma-incendios
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: plataforma.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: ms-bff
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mfe-mapeo
                port:
                  number: 80
